--- a/src/app.html
+++ b/src/app.html
@@ -1,68 +1,53 @@
 <!doctype html>
 <html lang="cs" dir="ltr">
-	<head>
-		<head>
-			<meta charset="UTF-8" />
-			<meta name="viewport" content="width=device-width, initial-scale=1" />
-			<title>
-				Šťastné srdce - Zdravé stravování a rozvoz jídla | Mikulovice, Jeseník
-			</title>
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<title>Malý Leo - Objednávkový systém</title>
 
-			<meta name="author" content="Mikigroup.cz" />
-			<meta
-				name="description"
-				content="Šťastné srdce nabízí zdravé stravování a rozvoz jídla v Mikulovicích a Jeseníku. Dietologické poradenství od Kamily Kučerové pro vaše zdraví a spokojenost." />
-			<meta
-				name="keywords"
-				content="šťastné srdce, mikulovice, zdraví, dietolog, kamila kučerová, rozvoz jídla, jeseník" />
-			<meta name="copyright" content="Šťastné srdce" />
+	<meta name="author" content="Malý Leo" />
+	<meta name="description" content="Malý Leo nabízí pohodlný online objednávkový systém." />
+	<meta name="keywords" content="malý leo, objednávkový systém, online objednávky" />
+	<meta name="copyright" content="Malý Leo" />
 
-			<meta name="robots" content="index, follow" />
+	<meta name="robots" content="index, follow" />
 
-			<meta
-				property="og:title"
-				content="Šťastné srdce - Zdravé stravování a rozvoz jídla" />
-			<meta
-				property="og:description"
-				content="Šťastné srdce nabízí zdravé stravování a rozvoz jídla v Mikulovicích a Jeseníku. Dietologické poradenství od Kamily Kučerové pro vaše zdraví a spokojenost." />
-			<meta property="og:type" content="website" />
-			<meta property="og:url" content="https://www.stastnesrdce.cz" />
-			<meta property="og:locale" content="cs_CZ" />
+	<meta property="og:title" content="Malý Leo - Online objednávkový systém" />
+	<meta property="og:description" content="Malý Leo nabízí pohodlný online objednávkový systém." />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://www.malyleo.cz" />
+	<meta property="og:locale" content="cs_CZ" />
 
-			<meta name="twitter:card" content="summary_large_image" />
-			<meta
-				name="twitter:title"
-				content="Šťastné srdce - Zdravé stravování a rozvoz jídla" />
-			<meta
-				name="twitter:description"
-				content="Šťastné srdce nabízí zdravé stravování a rozvoz jídla v Mikulovicích a Jeseníku. Dietologické poradenství od Kamily Kučerové pro vaše zdraví a spokojenost." />
+	<meta name="twitter:card" content="summary_large_image" />
+	<meta name="twitter:title" content="Malý Leo - Online objednávkový systém" />
+	<meta name="twitter:description" content="Malý Leo nabízí pohodlný online objednávkový systém." />
 
-			<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
+	<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
 
-			<link rel="preconnect" href="https://fonts.googleapis.com" />
-			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-			<link
+	<link rel="preconnect" href="https://fonts.googleapis.com" />
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+	<link
 				rel="stylesheet"
 				href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" />
 
-			<link
-				rel="stylesheet"
+	<link
+			rel="stylesheet"
 				href="https://cdn.jsdelivr.net/gh/yesiamrocks/cssanimation.io@1.0.3/cssanimation.min.css" />
 
-			<script
+	<script
 				src="https://kit.fontawesome.com/e5ce1babf6.js"
 				crossorigin="anonymous"></script>
 
 			%sveltekit.head%
-		</head>
-		<script>
+</head>
+		<!--<script>
 			window.dataLayer = window.dataLayer || [];
 			function gtag() {
 				dataLayer.push(arguments);
 			}
 			gtag("js", new Date());
 			gtag("config", "G-88SZ0DZWC8");
-		</script>
+		</script>-->
 		<!--<script type="text/javascript">
     (function(c,l,a,r,i,t,y){
         c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
